--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -5,4 +5,6 @@
     <div>
         <input type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
+    
+    <a href="{{ path('home') }}">Retour à l'accueil</a>
 {{ form_end(form) }}
