--- a/app/Resources/views/FormEtablis.html.twig
+++ b/app/Resources/views/FormEtablis.html.twig
@@ -6,8 +6,10 @@
 
 <div class="well">
 
-  {{ form(form2) }}
+  {{ form(formEtablissement) }}
 
 </div>
+
+<a href="{{ path('home') }}">Retour vers l'accueil</a>
 
 {% endblock %}
