--- a/app/Resources/views/FormPays.html.twig
+++ b/app/Resources/views/FormPays.html.twig
@@ -2,11 +2,11 @@
 
 {% block body %}
 
-<h1> FORMULAIRE ELEVE</h1>
+<h1> FORMULAIRE PAYS</h1>
 
 <div class="well">
 
-  {{ form(formEleve) }}
+  {{ form(formPays) }}
 
 </div>
 
