--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -17,9 +17,11 @@
 
         <p>ADMINISTARTEUR</p>
 
-        <p><a href="{{ path('form')}}">Accédez au formulaire 1</a></p>
+        <p><a href="{{ path('form')}}">Accédez au formulaire élève</a></p>
 
-        <p><a href="{{ path('form2')}}">Accédez au formulaire 2</a></p>
+        <p><a href="{{ path('form2')}}">Accédez au formulaire établissement</a></p>
+        
+        <p><a href="{{ path('formPays')}}">Accédez au formulaire pays</a></p>
     {% endif %}
 
 {% endblock %}
