ajout du formulaire de choix et de l'affichage des listes d'eleve et d'un eleve

--- a/app/Resources/views/FormSection.html.twig
+++ b/app/Resources/views/FormSection.html.twig
@@ -5,6 +5,16 @@
 
 <div class="well">
 
-<h1> FORMULAIRE DE CHOIX DE LA DESTINATION</h1>
+    <h1> FORMULAIRE DE CHOIX DE LA DESTINATION</h1>
 
+    <div class="well">
+
+      {{ form(formChoix) }}
+
+    </div>
+    
+    <a href="{{ path('home') }}">Retour vers l'accueil</a>
+    
 </div>
+
+{% endblock %}
