Gestion des promos

--- a/app/Resources/views/GestionEtablissement/ListeEtablissement.html.twig
+++ b/app/Resources/views/GestionEtablissement/ListeEtablissement.html.twig
@@ -6,7 +6,8 @@ Liste des établissements
 
 
 {% block body %}
-<p><a href="{{ path('ajout_etablissement') }}">Ajouter un nouvel établissement </a></p>
+<p><a style="float:left;" href="{{ path('ajout_etablissement') }}">Ajouter un nouvel établissement </a></p>
+<p><a style="float:right;" href="{{ path('admin') }}">Retour au Menu</a></p>
 <div class="well">
     <h1 style='text-align:center;'>Liste des Etablissements</h1>
     <table style ='border-collapse: collapse; text-align:center; margin: auto;'>
