--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -19,6 +19,8 @@
         <p><a href="{{ path('listePays')}}">Accéder à la gestion des Pays</a></p>
 
         <p><a href="{{ path('listeEtablissement')}}">Accéder à la gestion des Etablissements</a></p>
+
+        <p><a href="{{ path('listePromos')}}">Accéder à la gestion des Promotions</a></p>
     {% endif %}
 
 {% endblock %}
