Création de la gestion des élèves

--- a/app/Resources/views/GestionPays/modifPays.html.twig
+++ b/app/Resources/views/GestionPays/modifPays.html.twig
@@ -5,7 +5,7 @@
         <h1>Modification d'un pays</h1>
         {{ form_start(formModif) }}
         <div style="width:200px">
-            {{ form_row(formModif.liellePays) }}
+            {{ form_row(formModif.libellePays) }}
         </div>
         {{ form_row(formModif.submit) }}
         
