--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -14,7 +14,7 @@
 
         <p>ADMINISTARTEUR</p>
 
-        <p><a href="{{ path('form')}}">Accéder au formulaire élève</a></p>
+        <p><a href="{{ path('listeEleve')}}">Accéder à la gestion des élèves</a></p>
         
         <p><a href="{{ path('listePays')}}">Accéder à la gestion des Pays</a></p>
 
