--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -21,6 +21,10 @@
         <p><a href="{{ path('listeEtablissement')}}">Accéder à la gestion des Etablissements</a></p>
 
         <p><a href="{{ path('listePromos')}}">Accéder à la gestion des Promotions</a></p>
+        
+        <p><a href="{{ path('listeLangue')}}">Accéder à la gestion des Langues</a></p>
+        
+        <p><a href="{{ path('listeExaminateur')}}">Accéder à la gestion des examinateurs</a></p>
     {% endif %}
 
 {% endblock %}
